2014-05-26  Per Bothner  <per@bothner.com>

	Improve bytecode for creating arrays with splices.
	* ArrayMake.java: New class, extends ProcedureN.
	* CompileArrays.java (compileMake, createArrays): New static methods.
	* CompileInvoke.java: Handle splices when creating arrays.
	* Invoke.java: Update since validateApplyInvoke handles splices.

2014-05-06  Per Bothner  <per@bothner.com>

	* Invoke.java (applyN): Add support for constructing a ConstVector.

2014-02-16  Per Bothner  <per@bothner.com>

	* CompileBuildObject.java: Likewise.
	* CompileInvoke.java: Likewise.
	* CompileReflect.java: Likewise.
	* FieldLocation.java: Likewise.
	* Invoke.java: Likewise.
	* MakeAnnotation.java: Likewise.

2014-02-12  Per Bothner  <per@bothner.com>

	* SlotGet.java: Use WrappedException.rethrow.
	* SlotSet.java: Likewise..
	* FieldLocation.java (getFieldValue): Likewise.
	(set): Catch Exception only so we don't wrap Error.

2014-01-05  Per Bothner  <per@bothner.com>

	* Makefile.am: Merge into ../../../gnu/Makefile.am and remove.

2013-12-20  Per Bothner  <per@bothner.com>

	* Invoke.java (lookupMethods): Minor tweaks.

2013-09-07  Per Bothner  <per@bothner.com>

	* CompileReflect.java: Update for mostSpecific metho being moved.

2013-06-02  Per Bothner  <per@bothner.com>

	* CompileInvoke.java (validateApplyInvoke): Use Language.unionType.

2013-05-11  Per Bothner  <per@bothner.com>

	* ClassMethods.java (getMethods): Instead of replacing Method with
	declaring-class-adjusted method, pass both to PrimProcedure.
	Specifically use the initial method for overload resolution and
	only use the adjusted method for code-generation.

	* ClassMethods.java: Update to use Java2 List with generics.

2012-12-15  Per Bothner  <per@bothner.com>

	* Throw.java: Moved from kawa/standard/prim_throw.
	Set validateApply handler.
	(compile): Don't create new ClassType instance for Throwable, as
	that causes pointless cast.
	(getReturnType): Remove.
	* Makefile.am: Update for new class.