@@ -3,17 +3,16 @@ import gnu.bytecode.*;
 import gnu.mapping.*;
 import java.io.*;
 
-public class ArraySet extends Procedure3 implements Externalizable
-{
-  Type element_type;
+public class ArraySet extends Procedure3 implements Externalizable {
+    Type element_type;
 
-  public ArraySet (Type element_type)
-  {
-    this.element_type = element_type;
-    setProperty(Procedure.validateApplyKey,
-                "gnu.kawa.reflect.CompileArrays:validateArraySet");
-    Procedure.compilerKey.set(this, "*gnu.kawa.reflect.CompileArrays:getForArraySet");
-  }
+    public ArraySet(Type element_type) {
+        this.element_type = element_type;
+        setProperty(Procedure.validateApplyKey,
+                    "gnu.kawa.reflect.CompileArrays:validateArraySet");
+        setProperty(Procedure.compilerXKey,
+                    "gnu.kawa.reflect.CompileArrays:compileSet");
+    }
 
   public Object apply3 (Object array, Object index, Object value)
   {
